<resources>
    <string name="app_name">AppPortfolio</string>

    <string name="app_title">Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_app">Spotify Streamer</string>
    <string name="scores_button">Scores App</string>
    <string name="library_button">Library App</string>
    <string name="build_bigger_button">Build It Bigger</string>
    <string name="reader_button">XYZ Reader</string>
    <string name="capstone_button">CAPSTONE: MY OWN APP</string>
    <string name="spotify_toast">This button will launch my Spotify App</string>
    <string name="scores_toast">This button will launch my Scores App</string>
    <string name="library_toast">This button will launch my Library App</string>
    <string name="build_bigger_toast">This button will launch my Build It Bigger App</string>
    <string name="reader_toast">This button will launch my XYZ Reader</string>
    <string name="capstone_toast">This button will launch my Capstone App</string>
</resources>
